# fmradio

./: CMakeLists.txt  README.md  TODO.txt  fmradio.desktop.in  main.cpp
debian/: changelog  control  copyright
plugins/MediatekRadio/: CMakeLists.txt  MediatekRadio.cpp  MediatekRadio.h  plugin.cpp  qmldir
po/: CMakeLists.txt
qml/: Main.qml
